Update the dataset stats for normalization

--- a/notebooks/23_la_quat_to_6D_rotation.ipynb
+++ b/notebooks/23_la_quat_to_6D_rotation.ipynb
@@ -456,16 +456,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.dataset.normalizer import get_data_stats"
+    "from src.dataset.normalizer import get_data_stats\n",
+    "import zarr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,22 +478,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'action/delta'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Get stats for the action/delta group\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m stats \u001b[38;5;241m=\u001b[39m get_data_stats(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43maction/delta\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[:])\n",
-      "File \u001b[0;32m/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/zarr/hierarchy.py:500\u001b[0m, in \u001b[0;36mGroup.__getitem__\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m    498\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(item)\n\u001b[1;32m    499\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 500\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(item)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'action/delta'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get stats for the action/delta group\n",
     "stats_action_delta = get_data_stats(data[\"action/delta\"][:])"
@@ -500,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,12 +498,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'min': array([ 3.6796403e-01, -1.2107742e-01, -9.4676018e-04,  4.5521772e-01,\n",
+       "        -4.9238873e-01, -8.8446426e-01, -2.9223782e-01, -3.4973526e-01,\n",
+       "        -9.9999976e-01, -5.7645077e-01, -1.0413504e+00, -3.7505794e-01,\n",
+       "        -2.9366529e+00, -1.6179684e+00, -1.5501328e+00,  4.3341974e-05],\n",
+       "       dtype=float32),\n",
+       " 'max': array([0.6660453 , 0.38340795, 0.14452612, 1.        , 0.2928874 ,\n",
+       "        0.6226259 , 0.62719893, 1.        , 1.        , 0.2568125 ,\n",
+       "        0.24684519, 0.17753786, 2.3147857 , 2.4254742 , 1.4082819 ,\n",
+       "        0.065     ], dtype=float32)}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get stats for the robot_state group\n",
+    "stats_robot_state = get_data_stats(data[\"robot_state\"][:])\n",
+    "stats_robot_state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def listify_stats(stats):\n",
+    "    return {\n",
+    "        \"min\": stats[\"min\"].tolist(),\n",
+    "        \"max\": stats[\"max\"].tolist(),\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write the stats to the stats json file\n",
+    "import json\n",
+    "\n",
+    "filepath = \"/data/scratch/ankile/furniture-diffusion/src/dataset/data_stats.json\"\n",
+    "\n",
+    "\n",
+    "with open(filepath, \"w\") as f:\n",
+    "    json.dump(\n",
+    "        {\n",
+    "            \"action/delta\": listify_stats(stats_action_delta),\n",
+    "            \"action/pos\": listify_stats(stats_action_pos),\n",
+    "            \"robot_state\": listify_stats(stats_robot_state),\n",
+    "        },\n",
+    "        f,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from glob import glob\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get stats for the robot_state group\n",
-    "stats_robot_state = get_data_stats(data[\"robot_state\"][:])"
+    "paths = [\n",
+    "    Path(p)\n",
+    "    for p in glob(\n",
+    "        \"/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/one_leg/scripted/**/success/*.pkl*\",\n",
+    "        recursive=True,\n",
+    "    )\n",
+    "]"
    ]
   }
  ],
