Clean up implementation dataset and normalization

--- a/notebooks/23_la_quat_to_6D_rotation.ipynb
+++ b/notebooks/23_la_quat_to_6D_rotation.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,14 +466,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(141256, 16)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = zarr.open(\n",
     "    \"/data/scratch/ankile/furniture-data/processed/image/sim/one_leg/scripted/success.zarr\",\n",
     "    mode=\"r\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "data[\"robot_state\"].shape"
    ]
   },
   {
@@ -498,24 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'min': array([ 3.6796403e-01, -1.2107742e-01, -9.4676018e-04,  4.5521772e-01,\n",
-       "        -4.9238873e-01, -8.8446426e-01, -2.9223782e-01, -3.4973526e-01,\n",
-       "        -9.9999976e-01, -5.7645077e-01, -1.0413504e+00, -3.7505794e-01,\n",
-       "        -2.9366529e+00, -1.6179684e+00, -1.5501328e+00,  4.3341974e-05],\n",
-       "       dtype=float32),\n",
-       " 'max': array([0.6660453 , 0.38340795, 0.14452612, 1.        , 0.2928874 ,\n",
-       "        0.6226259 , 0.62719893, 1.        , 1.        , 0.2568125 ,\n",
-       "        0.24684519, 0.17753786, 2.3147857 , 2.4254742 , 1.4082819 ,\n",
-       "        0.065     ], dtype=float32)}"
+       "(16,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +528,7 @@
    "source": [
     "# Get stats for the robot_state group\n",
     "stats_robot_state = get_data_stats(data[\"robot_state\"][:])\n",
-    "stats_robot_state"
+    "stats_robot_state[\"min\"].shape"
    ]
   },
   {
