Fix bug in the quat-6D conversion code

--- a/notebooks/23_la_quat_to_6D_rotation.ipynb
+++ b/notebooks/23_la_quat_to_6D_rotation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,32 +466,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(141256, 16)"
+       "((91801, 16), (150,))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = zarr.open(\n",
-    "    \"/data/scratch/ankile/furniture-data/processed/image/sim/one_leg/scripted/success.zarr\",\n",
+    "    \"/data/scratch/ankile/furniture-data/processed/sim/one_leg/scripted/success.zarr\",\n",
     "    mode=\"r\",\n",
     ")\n",
     "\n",
-    "data[\"robot_state\"].shape"
+    "data[\"robot_state\"].shape, data[\"episode_ends\"].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "(16,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
     "# Write the stats to the stats json file\n",
     "import json\n",
     "\n",
-    "filepath = \"/data/scratch/ankile/furniture-diffusion/src/dataset/data_stats.json\"\n",
+    "filepath = \"/data/scratch/ankile/furniture-diffusion/src/dataset/data_stats.py\"\n",
     "\n",
     "\n",
     "with open(filepath, \"w\") as f:\n",
