--- a/notebooks/25_la_debug_new_controller.ipynb
+++ b/notebooks/25_la_debug_new_controller.ipynb
@@ -71,8 +71,7 @@
     "from src.common.geometry import action_to_6d_rotation\n",
     "from src.data_processing.utils import resize, resize_crop\n",
     "\n",
-    "from tqdm import trange\n",
-    "\n",
+    "from tqdm import trange, tqdm\n",
     "\n",
     "from src.gym import get_env"
    ]
@@ -109,14 +108,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "250"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found  250\n"
+     ]
     }
    ],
    "source": [
@@ -132,21 +128,103 @@
     "\n",
     "scripted_pickles = list(scripted_dir.glob(\"*.pkl*\"))\n",
     "\n",
-    "len(scripted_pickles)"
+    "print(\"Found \", len(scripted_pickles))\n",
+    "\n",
+    "scripted_data = [unpickle_data(p) for p in scripted_pickles[:5]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scripted_data = [unpickle_data(p) for p in scripted_pickles[:10]]"
+    "def env_replay(env, data, max_len=1_000):\n",
+    "    # Play them back in the simulator\n",
+    "    for i, data in enumerate(data[:5]):\n",
+    "        # Reset the env\n",
+    "        env.reset()\n",
+    "\n",
+    "        # Cut of the trajectory at max_len\n",
+    "        actions = np.array(data[\"actions\"][:max_len])\n",
+    "        max_len = (\n",
+    "            actions.shape[0] if max_len is None else min(max_len, actions.shape[0])\n",
+    "        )\n",
+    "        observations = data[\"observations\"][:max_len]\n",
+    "\n",
+    "        # Set the initial state\n",
+    "        env.reset_env_to(env_idx=0, state=observations[0])\n",
+    "\n",
+    "        # Play back the actions in the trajectory\n",
+    "        imgs1 = []\n",
+    "        imgs2 = []\n",
+    "\n",
+    "        action = action_to_6d_rotation(torch.tensor(actions).cuda())\n",
+    "\n",
+    "        for i in trange(len(actions)):\n",
+    "            obs, reward, done, info = env.step(action[i : i + 1])\n",
+    "            imgs1.append(resize(obs[\"color_image1\"]).squeeze().cpu().numpy())\n",
+    "            imgs2.append(resize_crop(obs[\"color_image2\"]).squeeze().cpu().numpy())\n",
+    "\n",
+    "        # See the scripted and the replay side-by-side\n",
+    "        ims2_s = np.array([o[\"color_image2\"] for o in observations])\n",
+    "        ims2_r = np.array(imgs2)\n",
+    "\n",
+    "        print(ims2_s.shape, ims2_r.shape)\n",
+    "\n",
+    "        ims_sbs = np.concatenate([ims2_s, ims2_r], axis=2)\n",
+    "\n",
+    "        create_mp4_jupyter(ims_sbs, tmp_dir / f\"replay{i}.mp4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Look at teleop data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found  1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00,  7.82it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "teleop_dir = (\n",
+    "    Path(os.environ[\"DATA_DIR_RAW\"])\n",
+    "    / \"raw\"\n",
+    "    / \"sim\"\n",
+    "    / \"square_table\"\n",
+    "    / \"teleop\"\n",
+    "    / \"low\"\n",
+    "    / \"success\"\n",
+    ")\n",
+    "\n",
+    "teleop_pickles = list(teleop_dir.glob(\"*.pkl*\"))\n",
+    "\n",
+    "print(\"Found \", len(teleop_pickles))\n",
+    "\n",
+    "teleop_data = [unpickle_data(p) for p in tqdm(teleop_pickles[:10])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -154,133 +232,37 @@
      "output_type": "stream",
      "text": [
       "INFO: Found collision-free init pose\n",
-      "100%|██████████| 614/614 [00:28<00:00, 21.23it/s]\n"
+      "  0%|          | 1/600 [00:00<01:00,  9.92it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(614, 240, 320, 3) (614, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay613.mp4\n"
+      "square_table_top (id: 0), square_table_leg4 (id: 4) are assembled.\n",
+      "Assembled Set\n",
+      "[square_table_top (id: 0), square_table_leg4 (id: 4)] \n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay613.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 656/656 [00:28<00:00, 23.34it/s]\n"
+      "100%|██████████| 600/600 [00:29<00:00, 20.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(656, 240, 320, 3) (656, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay655.mp4\n"
+      "(600, 240, 320, 3) (600, 240, 320, 3)\n",
+      "File saved as tmp_rollout_dir/replay599.mp4\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay655.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 654/654 [00:27<00:00, 24.01it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(654, 240, 320, 3) (654, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay653.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay653.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 605/605 [00:27<00:00, 21.93it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(605, 240, 320, 3) (605, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay604.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay604.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 609/609 [00:27<00:00, 22.53it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(609, 240, 320, 3) (609, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay608.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay608.mp4\" width=\"640\" height=\"480\"></video>"
+       "<video controls src=\"tmp_rollout_dir/replay599.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -291,35 +273,7 @@
     }
    ],
    "source": [
-    "# Play them back in the simulator\n",
-    "for i, data in enumerate(scripted_data[:5]):\n",
-    "    # Reset the env\n",
-    "    env.reset()\n",
-    "\n",
-    "    # Set the initial state\n",
-    "    env.reset_env_to(env_idx=0, state=data[\"observations\"][0])\n",
-    "\n",
-    "    # Play back the actions in the trajectory\n",
-    "    imgs1 = []\n",
-    "    imgs2 = []\n",
-    "\n",
-    "    actions = np.array(data[\"actions\"])\n",
-    "    action = action_to_6d_rotation(torch.tensor(actions).cuda())\n",
-    "\n",
-    "    for i in trange(len(actions)):\n",
-    "        obs, reward, done, info = env.step(action[i : i + 1])\n",
-    "        imgs1.append(resize(obs[\"color_image1\"]).squeeze().cpu().numpy())\n",
-    "        imgs2.append(resize_crop(obs[\"color_image2\"]).squeeze().cpu().numpy())\n",
-    "\n",
-    "    # See the scripted and the replay side-by-side\n",
-    "    ims2_s = np.array([o[\"color_image2\"] for o in data[\"observations\"]])[:-1]\n",
-    "    ims2_r = np.array(imgs2)\n",
-    "\n",
-    "    print(ims2_s.shape, ims2_r.shape)\n",
-    "\n",
-    "    ims_sbs = np.concatenate([ims2_s, ims2_r], axis=2)\n",
-    "\n",
-    "    create_mp4_jupyter(ims_sbs, tmp_dir / f\"scripted_replay{i}.mp4\")"
+    "env_replay(env, teleop_data[:5], max_len=600)"
    ]
   },
   {
@@ -328,7 +282,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del env"
+    "# import pca and plot\n",
+    "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -337,22 +293,46 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Making new env: FurnitureSim-v0 ({'furniture': 'one_leg', 'num_envs': 1, 'resize_img': False, 'concat_robot_state': True, 'headless': True, 'obs_keys': ['robot_state/ee_pos', 'robot_state/ee_quat', 'robot_state/ee_pos_vel', 'robot_state/ee_ori_vel', 'robot_state/gripper_width', 'color_image1', 'color_image2', 'parts_poses'], 'compute_device_id': 0, 'graphics_device_id': 0, 'init_assembled': False, 'np_step_out': False, 'channel_first': False, 'randomness': 'low', 'high_random_idx': -1, 'save_camera_input': False, 'record': False, 'max_env_steps': 3000, 'act_rot_repr': 'quat', 'ctrl_mode': 'osc', 'verbose': False})\n"
-     ]
+     "data": {
+      "text/plain": [
+       "((3138, 8), (668, 8))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "env: FurnitureSimEnv = get_env(\n",
-    "    furniture=\"one_leg\",\n",
-    "    num_envs=1,\n",
-    "    gpu_id=0,\n",
-    "    act_rot_repr=\"quat\",\n",
-    "    ctrl_mode=\"osc\",\n",
-    "    randomness=\"low\",\n",
-    "    resize_img=False,\n",
+    "actions_scripted = np.concatenate([d[\"actions\"] for d in scripted_data])\n",
+    "actions_teleop = np.concatenate([d[\"actions\"] for d in teleop_data])\n",
+    "actions = np.concatenate([actions_scripted, actions_teleop])\n",
+    "\n",
+    "labels = np.concatenate([np.zeros(len(actions_scripted)), np.ones(len(actions_teleop))])\n",
+    "\n",
+    "actions_scripted.shape, actions_teleop.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PCA\n",
+    "pca_xyz = PCA(n_components=2)\n",
+    "xyz_components = pca_xyz.fit_transform(actions[:, :3])\n",
+    "\n",
+    "# plot\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
+    "\n",
+    "ax.scatter(\n",
+    "    xyz_components[:, 0],\n",
+    "    xyz_components[:, 1],\n",
+    "    c=labels,\n",
+    "    alpha=0.5,\n",
     ")"
    ]
   },
@@ -362,177 +342,35 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 614/614 [00:25<00:00, 23.98it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(614, 240, 320, 3) (614, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay613.mp4\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay613.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "Text(0.5, 0, 'Z')"
       ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 656/656 [00:27<00:00, 23.59it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(656, 240, 320, 3) (656, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay655.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay655.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 654/654 [00:26<00:00, 24.33it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(654, 240, 320, 3) (654, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay653.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay653.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 605/605 [00:25<00:00, 23.28it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(605, 240, 320, 3) (605, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay604.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay604.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Found collision-free init pose\n",
-      "100%|██████████| 609/609 [00:25<00:00, 23.48it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(609, 240, 320, 3) (609, 240, 320, 3)\n",
-      "File saved as tmp_rollout_dir/scripted_replay608.mp4\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video controls src=\"tmp_rollout_dir/scripted_replay608.mp4\" width=\"640\" height=\"480\"></video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Play them back in the simulator\n",
-    "for i, data in enumerate(scripted_data[:5]):\n",
-    "    # Reset the env\n",
-    "    env.reset()\n",
+    "# Make interactive 3D plot of xyz actions\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "    # Set the initial state\n",
-    "    env.reset_env_to(env_idx=0, state=data[\"observations\"][0])\n",
+    "fig = plt.figure(figsize=(6, 6))\n",
     "\n",
-    "    # Play back the actions in the trajectory\n",
-    "    imgs1 = []\n",
-    "    imgs2 = []\n",
+    "ax = fig.add_subplot(111, projection=\"3d\")\n",
     "\n",
-    "    actions = np.array(data[\"actions\"])\n",
-    "    # action = action_to_6d_rotation(torch.tensor(actions).cuda())\n",
-    "    action = torch.tensor(actions).cuda()\n",
+    "ax.scatter(\n",
+    "    actions[:, 0],\n",
+    "    actions[:, 1],\n",
+    "    actions[:, 2],\n",
+    "    c=labels,\n",
+    "    alpha=0.5,\n",
+    ")\n",
     "\n",
-    "    for i in trange(len(actions)):\n",
-    "        obs, reward, done, info = env.step(action[i : i + 1])\n",
-    "        imgs1.append(resize(obs[\"color_image1\"]).squeeze().cpu().numpy())\n",
-    "        imgs2.append(resize_crop(obs[\"color_image2\"]).squeeze().cpu().numpy())\n",
-    "\n",
-    "    # See the scripted and the replay side-by-side\n",
-    "    ims2_s = np.array([o[\"color_image2\"] for o in data[\"observations\"]])[:-1]\n",
-    "    ims2_r = np.array(imgs2)\n",
-    "\n",
-    "    print(ims2_s.shape, ims2_r.shape)\n",
-    "\n",
-    "    ims_sbs = np.concatenate([ims2_s, ims2_r], axis=2)\n",
-    "\n",
-    "    create_mp4_jupyter(ims_sbs, tmp_dir / f\"scripted_replay{i}.mp4\")"
+    "ax.set_xlabel(\"X\")\n",
+    "ax.set_ylabel(\"Y\")\n",
+    "ax.set_zlabel(\"Z\")"
    ]
   },
   {
