Small fixes in teleop collection training

--- a/notebooks/22_la_teleop_demos.ipynb
+++ b/notebooks/22_la_teleop_demos.ipynb
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Importing module 'gym_38' (/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/gym_38.so)\n",
-      "Setting GYM_USD_PLUG_INFO_PATH to /data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/usd/plugInfo.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import furniture_bench\n",
     "\n",
@@ -1539,11 +1530,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inspect the teleop demos that are continued from one_leg scripted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demos = list(\n",
+    "    Path(\n",
+    "        \"/data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/teleop\"\n",
+    "    ).rglob(\"**/success/*.pkl\")\n",
+    ")\n",
+    "\n",
+    "len(demos)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Look at them\n",
+    "for d in demos:\n",
+    "    mp4_from_pickle_jupyter(d, tmp_rollout_dir / f\"{d.stem}.mp4\")"
+   ]
   }
  ],
  "metadata": {
