Tune the teleop software

--- a/notebooks/22_la_teleop_demos.ipynb
+++ b/notebooks/22_la_teleop_demos.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,13 +1538,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zarr\n",
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "from src.visualization.render_mp4 import mp4_from_pickle_jupyter\n",
+    "\n",
+    "tmp_rollout_dir = Path(\".\") / \"tmp_rollout_dir\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "5"
       ]
      },
      "execution_count": 10,
@@ -1564,14 +1578,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/2024-01-23T14:58:35.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/2024-01-23T14:58:35.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/2024-01-23T14:54:21.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/2024-01-23T14:54:21.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/2024-01-23T15:00:21.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/2024-01-23T15:00:21.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/2024-01-23T14:52:24.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/2024-01-23T14:52:24.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File saved as tmp_rollout_dir/2024-01-23T14:47:44.mp4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<video controls src=\"tmp_rollout_dir/2024-01-23T14:47:44.mp4\" width=\"640\" height=\"480\"></video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Look at them\n",
     "for d in demos:\n",
-    "    mp4_from_pickle_jupyter(d, tmp_rollout_dir / f\"{d.stem}.mp4\")"
+    "    mp4_from_pickle_jupyter(d, tmp_rollout_dir / f\"{d.stem}.mp4\", fps=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
