Training on teleop demos

--- a/notebooks/22_la_teleop_demos.ipynb
+++ b/notebooks/22_la_teleop_demos.ipynb
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
        "1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,20 +1620,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File saved as tmp_rollout_dir/2024-01-24T10:47:49.mp4\n"
+      "File saved as tmp_rollout_dir/2024-01-24T11:15:46.mp4\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video controls src=\"tmp_rollout_dir/2024-01-24T10:47:49.mp4\" width=\"640\" height=\"480\"></video>"
+       "<video controls src=\"tmp_rollout_dir/2024-01-24T11:15:46.mp4\" width=\"640\" height=\"480\"></video>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1651,14 +1651,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/teleop/low/success/2024-01-24T10:47:49.pkl\n"
+      "0 /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/teleop/low/success/2024-01-24T10:47:49.pkl\n",
+      "1 /data/scratch-oc40/pulkitag/ankile/furniture-data/raw/sim/square_table/teleop/low/success/2024-01-24T10:51:09.pkl\n"
      ]
     }
    ],
@@ -1865,16 +1866,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1332"
+       "1186"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1894,7 +1895,7 @@
        "dict_keys(['observations', 'actions', 'rewards', 'skills', 'success', 'furniture', 'error', 'error_description'])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1908,16 +1909,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(940, 939, 939)"
+       "(1284, 1283, 1283)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
